force-app/main/default/objects/Asistencia_a_Espacio_Educativo__c/Asistencia_a_Espacio_Educativo__c.object-meta.xml
<CustomObject>
    <label>Asistencia a Espacio Educativo</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Registro Asistencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asistencia a Espacios Educativos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>