force-app/main/default/objects/Asistencia_a_Espacio_Educativo__c/fields/Asistencia1__c.field-meta.xml
<CustomField>
    <fullName>Asistencia1__c</fullName>
    <formula>Text(ROUND((Encuentros_Asistidos__c /Cantidad_de_Encuentros__c )*100,0) ) &amp; &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Asistencia</label>
    <type>Text</type>
</CustomField>