force-app/main/default/objects/Asistencia_a_Espacio_Educativo__c/fields/Asistencia__c.field-meta.xml
<CustomField>
    <fullName>Asistencia__c</fullName>
    <formula>(Encuentros_Asistidos__c / Cantidad_de_Encuentros__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Asistencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>