force-app/main/default/objects/Asistencia_a_Espacio_Educativo__c/fields/Boletin__c.field-meta.xml
<CustomField>
    <fullName>Boletin__c</fullName>
    <label>Boletin</label>
    <referenceTo>Boletin__c</referenceTo>
    <relationshipLabel>Asistencia a Espacios Educativos</relationshipLabel>
    <relationshipName>Asistencia_a_Espacios_Educativos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>