force-app/main/default/objects/Asistencia_a_Espacio_Educativo__c/fields/Cantidad_de_Encuentros__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Encuentros__c</fullName>
    <inlineHelpText>Cantidad de encuentros que hubo del espacio en el mes seleccionado</inlineHelpText>
    <label>Cantidad de Encuentros</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>