force-app/main/default/objects/Asistencia_a_Espacio_Educativo__c/fields/Encuentros_Asistidos__c.field-meta.xml
<CustomField>
    <fullName>Encuentros_Asistidos__c</fullName>
    <inlineHelpText>Cantidad de veces que asistió al encuentro del espacio en el mes seleccionado</inlineHelpText>
    <label>Encuentros Asistidos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>