force-app/main/default/objects/Asistencia_a_Espacio_Educativo__c/fields/Espacio_Educativo__c.field-meta.xml
<CustomField>
    <fullName>Espacio_Educativo__c</fullName>
    <label>Espacio Educativo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acompañamiento Educativo</fullName>
            </value>
            <value>
                <fullName>Desarrollo Personal</fullName>
            </value>
            <value>
                <fullName>Proyecto CAS</fullName>
            </value>
            <value>
                <fullName>Capacitacion</fullName>
            </value>
            <value>
                <fullName>Practica Educativa</fullName>
            </value>
            <value>
                <fullName>Acompañamiento Personal</fullName>
                <isActive>false</isActive>
                <label>Acompañamiento Personal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>